# webds_heatmap

./: .gitignore  .prettierignore  MANIFEST.in  README.md  RELEASE.md  install.json  package-lock.json  package.json  pyproject.toml  setup.py
.github/workflows/: build.yml
binder/: environment.yml  postBuild
src/: heatmap_component.tsx  heatmap_live.tsx  heatmap_playback.tsx  icons.ts  index.ts  local_exports.ts  widget_container.tsx  widget_landing.tsx  widget_mui.tsx  widget_playback.tsx
src/widget/: HeatmapComponent.tsx  HeatmapWidget.tsx  Landing.tsx  LivePlot.tsx  Playback.tsx  PlaybackPlot.tsx  adc_playback  constants.tsx  live_controls  local_exports.tsx
style/: base.css
